# hops_trunk

./: ASCL.txt  ChangeLog.txt  Copyright  MacPorts.txt  Makefile.am  README.difx.txt  README.md  README.svn.txt  README.vendor.txt  autogen.sh  automake-modernize-notes.txt  configure.ac  git_diff_ffcontrol.py.in_20241109.txt  hops.bash.in  python-setup-notes.txt  sync-chops.sh
chops/: CMakeLists.txt  Makefile.am  chopsenv.sh.in  configure.ac  dev_readme.txt  hops_config.h.cmake  hops_config.h.in  import_hops.sh  importcheck.py.in  pypath.py
chops/cmake/: FindGFORTRAN.cmake  FindPGPLOT.cmake  chopsDefaults.cmake
chops/m4/: printer.m4
chops/source/bash_src/: chopsenv.sh.cmake
chops/source/python_src/: Makefile.am
correlator/prog/: Makefile.am
correlator/prog/text/: MesAlias.hay  mk4codes.txt
difx/: Makefile.am  dumpinput.c  dumpswin.c  dumpvis.c  gbcdump.cpp
difx2mark4/src/: Makefile.am  difx2mark4.h  type_writes.h  write_t100.c  write_t101.c  write_t120.c  write_t300.c  write_t301.c  write_t302.c  write_t303.c  write_t309.c
doc/doxy/: Makefile.am  hops-aedit.doxy.in  hops-alist.doxy.in  hops-fourfit.doxy.in  hops-include.doxy.in  hops-sub.doxy.in
doc/fourfit/: Makefile.am  algorithms.tex  architecture.tex  calling_graphs.tex  cf_keywords.tex  command_line_options.tex  file_based_pcal.tex  fourfit_users_manual.tex  fringe_plots.tex  history.tex  introduction.tex  mk4_files.tex  multitone_pcal.tex  new_parameters.tex  program_control.tex  program_output.tex  svn_history.tex
doc/fourfit/lags/: lag-photo.txt
doc/fourfit/web/: fourfit_phase_by_file.docx
doc/future/hops-development/: MSRI_Haystack_task_oriented_V3.mpp  Makefile.am  designdetails.tex  designoutline.tex  detailedtimeline.tex  feedback.txt  hops-development.bib  hops-development.tex  introduction.tex  talking-points-hilo.txt
doc/future/hops-spec/: Makefile.am  hops-spec.bib  hops-spec.tex
mark5/: GetBankStatus.cpp  GetDeviceInfo.cpp  GetDirInfo.cpp  GetDirectoryInfo.cpp  GetDriveInfo.cpp  GetDriveTemp.cpp  GetSMART.cpp  GetSerial.cpp  Makefile.am  dls_compat.h  dls_utils.h  mk5_main.cpp
mark5/stubs/: Parse5A-2007-05-22.h  Parse5A-2008-10-14.h  Parse5A-2009-03-17.h  mark5dir.h  streamstor.pc  xlr_stubs.cpp  xlrapi.h  xlrdbcommon.h  xlrtypes.h
misc/bits/: Makefile.am  Makefile_am  README_alone  anoise.c  anoise.h  anoise.sh  anoise_common.c  anoise_describe.c  anoise_extend.c  anoise_maker.c  anoise_station.c  b4antsum.c  b4ensb.c  b4thresh.c  bfind.c  bnoise.c  bstate.c  bwrite.c  configure_ac  corel_alma.sh  fakit.sh  params.sh  quant_hacker.c  start_alma.sh  vnoise.c  vnoise.h  vnoise_maker.c
misc/bits/support/: m5c-vdif-zc-doit.sh  m5c-vdif-zc-plot.sh  rng  rng.out  rng.out-sort  rng.out-u  rng.out-u-sort  rng.out-z  rng.out-z-sort
misc/plan/: EGparang.f  Makefile.am  brute.c  check_dsolv.sh  check_dsolv3.sh  check_multifit_test.sh  dsolv.f  dsolv.out  dsolv2.f  dsolv2.out  dsolv3.c  dsolv3.h  dsolv3.out  dsolv3_main.c  gmst_chk.c  hiband.XL.AR.dsolvin  hiband.XL.AR.dsolvin2  load_alist.c  multifit_test.c  netsolv.c  network.c  network.h  plotAlistResids.py  position_dsolv_ave.sh  readme.txt
misc/time/: Makefile.am  check_hops_time.sh  check_itime.sh  cnvrt_cdf_maia.c  diffs-r744  difx2mark4-make_id.c  eph_time.c  hetetimecode.h  hops_time.c  hops_time.h  ht_parser.c  ht_timeis.c  htime.3  htime.c  htime.h  isoclog.h  julian.c  julian.h  leapsec.c  leapsec.diffs  lifetest.c  lifetime.c  rtype.c  sc_time.c  time_float_type.h
misc/vlbi2/: Makefile.am  doit.sh  four.c  m5b_tshift.c  mainv.c  readme.txt  vlbi7.c  vlbiv.c  xcorr
misc/vlbi2/data/: wfmark5-16-if0-if2.ps
misc/vlbi2/wfmark5-09/: four.c  (+4 more)
ompi/: Makefile.am  all_load.c  configure.ac  hello_ompi.c  hops_ompi.h.in  ping_pong.c  readme.sh  ring.c  ringload.c  send_recv.c  test.sh
postproc/average/: Makefile.am  assess_data.c  average.c  average.h  baseline_avg.c  check_source.c  check_times.c  check_tribase.c  get_int_time.c  index_data.c  parse_cmdline.c  read_data.c  sort_data.c  sorter.c  triangle_avg.c
postproc/bispec/: Makefile.am  bispec.c  bispec.h  make_bispec.c  parse_cmdline.c
postproc/calamp/: Makefile.am  calamp.c  calamp.h  calfact.c  parse_cmdline.c  read_calfile.c
postproc/cofit/: Makefile.am  ampf.c  clear_codata.c  cofit.c  cofit.h  covsrt.c  fit_ampl.c  fit_codata.c  fit_snr.c  gaussj.c  mrqcof.c  mrqfix.c  normalize_snr.c  nr.h  parse_cmdline.c  plot_codata.c  pythag.c  read_data.c  sort_data.c  sorter.c  svbksb.c  svdcmp.c  svdcmpp.c  write_codata.c
postproc/coterp/: Makefile.am  check_lists.c  coterp.c  coterp.h  covsrt.c  dpythag.c  dsvdcmpp.c  elfactor.c  fit_cotime.c  fit_times.c  interp.c  mrqcof.c  mrqfix.c  parse_cmdline.c  plot_sttimes.c  read_data.c  sort_data.c  sorter.c  stationize.c  svbksb.c  write_data.c
postproc/fearfit/: Makefile.am  fearfit-brutal.pl  fearfit-driver.pl  fearfit-join-cf.pl  fearfit-make-cf.sh  fearfit-scan-cf.sh  fearfit.mk  hook_fearfit.txt  hook_freq_spacing.c  hook_import.sh  hook_make_plotdata.c  hook_norm.c  hook_output.c  hook_search.c  hook_vrot.c
postproc/fplot/: Makefile.am  chk_fplot.sh  fplot.c  fplot.h  parse_cmdline.c  skip_poln.c
postproc/hfold/: Makefile.am  fold.c  gaussj.c  hstkpoly.c  nr.h  polint.c  pythag.c  safe.c  safe25mar.c  svbksb.c  svdcmp.c  svdfit.c  svdvar.c  test.c  write_vsumm.c
postproc/pratio/: Makefile.am  calc_vec_avg.c  close_outfiles.c  compute_ratios.c  open_outfiles.c  parse_cmdline.c  pratio.c  ratio.c  reset_pol_field.c  set_pol_field.c  transfer_cotimes.c  write_ratios.c
postproc/search/: Makefile.am  clear_srchdata.c  fill_grids.c  fit_peaks.c  grid_filler.c  parabola.c  parse_cmdline.c  plot_srchdata.c  read_data.c  search.c  search.h  sort_data.c  sorter.c  write_srchdata.c
sub/: Makefile.am
sub/dfio/: alloc_t120_array.c  clear_mk4root.c  read_mk4root.c
sub/mk4py/: Makefile.am  afio.py.in  difxio.py.in  explanation.txt  extern.c  extern.h  mk4.py.in
sub/util/: Makefile.am  check_name.c  chk_get_filelist.sh  fileset.c  sort_names.c  swab.c  test_get_filelist.c
sub/vex/: get_logscan.c  old-test.c
(+741 files in other folders)
