#
# $Id: Makefile.am 497 2011-11-03 13:24:52Z gbc $
#

SUBDIRS =

# don't know who uses this one....
nobase_dist_pkgdata_DATA = \
	text/mk4codes.txt

# these are duplicated in sub/vex/text which is a better home.
#	text/blk_stmt.txt \
#	text/pformat.txt

# doc/*/* exist in our source but are not installed or used (yet)

#
# eof
#
